PVA client uses virtual threads for TCP connection